--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,9 @@ channels:
   - conda-forge
 dependencies:
   - numpy
-  - matplotlib
+  - matplotlib.pyplot
+  - mpl_toolkits.mplot3d
+  - matplotlib.cm
+  - matplotlib.ticker
   - pandas
   - xlsxwriter
