--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,6 @@ channels:
   - conda-forge
 dependencies:
   - numpy
-  - matplotlib.pyplot
-  - mpl_toolkits.mplot3d
-  - matplotlib.cm
-  - matplotlib.ticker
+  - matplotlib
   - pandas
   - xlsxwriter
