--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,9 @@
-name: Guia_Python_Environment
+name: Guia_de_Implementacion_de_Algoritmos_de_Ing_Industrial_Environment
 channels:
   - conda-forge
 dependencies:
+  - numpy
+  - matplotlib
+  - pandas
   - xlsxwriter
   - folium
